Upgrade electron dep to address vulnerability
Package name: electron
Affected versions: < 1.8.2-beta5
Fixed in version: 1.8.2-beta5

This commit updates the dependency from ~1.4.15 to ^1.8.7 (the latest 1.x release)

--- a/packages/react-devtools/package.json
+++ b/packages/react-devtools/package.json
@@ -23,7 +23,7 @@
   "license": "BSD-3-Clause",
   "dependencies": {
     "cross-spawn": "^5.0.1",
-    "electron": "~1.4.15",
+    "electron": "^1.8.7",
     "ip": "^1.1.4",
     "minimist": "^1.2.0",
     "react-devtools-core": "^3.2.2",
